  * Respect gravity when rendering text (e.g. convert -gravity center my.txt)
  * Return empty string for %d property and no directory (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29365)
  * Return filename for the %i property (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=29364).

2016-03-06  6.9.3-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-7, GIT revision 10628:810a9fe:20160306

2016-03-05  6.9.3-7 Dirk Lemstra <dirk@lem.....org>
  * -size can now be used the specify the maximum width/height for the
    following vector formats:
      * SVG (when librsvg and cairo are being used).
      * EMF (did not work on Windows).

2016-02-29  6.9.3-7 Cristy  <quetzlzacatenango@image...>
  * Fixed text alignment issue for label: / coder: (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29223).

2016-02-27  6.9.3-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-6, GIT revision 10597:83584a1:20160228.

2016-02-25  6.9.3-6 Cristy  <quetzlzacatenango@image...>
  * Ensure TXT: image format survives round-trip (reference
    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29206).

2016-02-21  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
  * Added wavelet denoise.

2016-02-20  6.9.3-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-5, GIT revision 10572:cb24a69:20160219.

2016-02-16  6.9.3-5 Cristy  <quetzlzacatenango@image...>
  * Too many bytes when writing raw image formats (reference
    https://github.com/ImageMagick/ImageMagick/issues/132).

2016-02-12  6.9.3-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-4, GIT revision 10560:09f5f5d:20160212.

2016-02-12  6.9.3-4 Dirk Lemstra <dirk@lem.....org>
  * Fixed memory leak when reading an SVG without width/height (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=27&p=130197).

2016-02-09  6.9.3-4 Cristy  <quetzlzacatenango@image...>